nginx-ingress/disallow-ingress-nginx-custom-snippets/.chainsaw-test/cm-bad.yaml
apiVersion: v1
data:
  allow-snippet-annotations: "true"
kind: ConfigMap
metadata:
  name: config-map-true
