nginx-ingress/disallow-ingress-nginx-custom-snippets/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-ingress-nginx-custom-snippets
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-ingress-nginx-custom-snippets.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: cm-good.yaml
    - apply:
        file: ig-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cm-bad.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ig-bad.yaml
